assessment_test/infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: test.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              service:
                name: auth-srv
              service:
                port: 3000
          - path: /?(.*)
            backend:
              service:
                name: client-srv
              service:
                port: 3000
